test/success/nullable-capture.dsk
let mut username: ?string = null

if username: name then
    echo(name)
end

username = "Geromel Dr."

if username: name then
    echo(name)
end
