test/error/nullable-must-be-unwrapped.dsk
let S = struct
    x: int
let s: ?S = null
echo(s.x)
